docs for show()
